style fix for responsive navbar on firefox-like devices

--- a/source/stylesheets/_navbar.scss
+++ b/source/stylesheets/_navbar.scss
@@ -1,7 +1,6 @@
 .nav {
 	background-color:black;
 	color:white;
-	min-height:100%;
 }
 
 .nav a {
